examples/test/testpolicy19027.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19027
  namespace: namespace434
spec:
  podSelector:
    matchLabels:
      key27: value36
      key43: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value13
          key34: value47
      podSelector:
        matchLabels:
          key8: value3
